removed my personal email from files, updated views forms, and removed preview data

--- a/whatJobRailsAPI/app/views/contactmessage_mailer/new_message_email.text.erb
+++ b/whatJobRailsAPI/app/views/contactmessage_mailer/new_message_email.text.erb
@@ -1,7 +1,7 @@
-You got a new order from <%= @contactmessage.name %>!
+You got a new contact request <%= @contactmessage.name %>!
 ===============================================
 
-Order Details:
+Contact Details:
 --------------------------
 
 Name: <%= @contactmessage.name %>
