--- a/what-job-react/src/App.css
+++ b/what-job-react/src/App.css
@@ -3,30 +3,30 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: top;
+  /* align-items: top;
   justify-content: top;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; */
 }
 
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -38,4 +38,103 @@ select{
   width: 25rem;
   height: 2rem;
   font-size: 20px;
+} */
+
+
+/* default is mobile */
+.nav{
+  text-decoration: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  justify-content: center;
 }
+
+.nav-logo{
+  grid-column: 1 / 2;
+  /* grid-template-rows: 1fr; */
+  padding: 15%
+}
+
+.nav-buttons{
+  grid-column: 2 / 2;
+  padding: 10% 28% 0px 5%;
+  
+  /* grid-template-rows: 1fr; */
+}
+
+
+.nav button{
+  border: steelblue 10px;
+  margin: 5%;
+  width: 100%;
+  
+}
+
+/* Tablet */
+@media screen and (min-width: 650px) and (max-width:1023px) {
+  .nav{
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: 1fr;
+    justify-content: center;
+  }
+  
+  
+  .nav-logo{
+    grid-column: 1 / 2;
+    padding: 10% 15% 5% 15%;
+    align-self: center;
+  }
+  
+  .nav-buttons{
+    grid-column: 2 / 2;
+    padding: 9% 25% 0px 10%;   
+  }
+  
+  
+  .nav button{
+    border: steelblue 10px;
+    margin: 10px;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+  }
+}
+
+/* Desktop - Still in beta */
+@media screen and (min-width: 1024px) {
+  .nav{
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 200px 4fr;
+    /* grid-template-rows: 1fr 1fr; */
+    justify-content: center;
+  }
+  
+  
+  .nav-logo{
+    grid-column: 1 / 2;
+    /* grid-row: 1; */
+    padding: 10% 15% 5% 15%;
+    align-self: center;
+    /* justify-self: center; */
+  }
+  
+  .nav-buttons{
+    grid-column: 1fr;
+    padding: 9% 25% 0px 10%;   
+  }
+  
+  
+  .nav button{
+    border: steelblue 10px;
+    margin: 10px;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+  }
+}
+
+
