implement report button on deep dive page and connected button to seccessfully send email to mailhog

--- a/whatJobRailsAPI/app/views/report_alert_mailer/report_alert_email.html.erb
+++ b/whatJobRailsAPI/app/views/report_alert_mailer/report_alert_email.html.erb
@@ -9,7 +9,7 @@
   <body>
     <p>A post has been flagged for your review! </p>
     <br>
-    <p> Post ID: <%= @reportalert.id %> </p>
+    <p> Post URL: <%= @reportalert.posturl %> </p>
     
   </body>
 </html>
