--- a/whatJobRailsAPI/app/views/report_alert_mailer/report_alert_email.text.erb
+++ b/whatJobRailsAPI/app/views/report_alert_mailer/report_alert_email.text.erb
@@ -1,3 +1,3 @@
-A post has been flagged for your review <%= @reportalert.id %>!
+A post has been flagged for your review <%= @reportalert.posturl %>!
 ===============================================
- Post ID: <%= @reportalert.id %> 
+ Post ID: <%= @reportalert.posturl %> 
