added hero images, some form layouts, fixed nav bar

--- a/what-job-react/src/App.css
+++ b/what-job-react/src/App.css
@@ -10,35 +10,6 @@
 }
 
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-
-.App-link {
-  color: #61dafb;
-}
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-select{
-  width: 25rem;
-  height: 2rem;
-  font-size: 20px;
-} */
 
 
 /* default is mobile */
@@ -53,7 +24,8 @@ select{
 .nav-logo{
   grid-column: 1 / 2;
   /* grid-template-rows: 1fr; */
-  padding: 15%
+  padding: 5% 15% 0% 15%;
+  align-self: center;
 }
 
 .nav-buttons{
@@ -68,7 +40,94 @@ select{
   border: steelblue 10px;
   margin: 5%;
   width: 100%;
+  padding: 2px;
+  border-radius: 18px;
+  box-shadow: 10px 10px;
+}
+
+/* Page Heading */
+.heading {
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  font-weight: 700;
+  color: white;
+}
+
+/* classess for the front page */
+.introduction {
+  text-align: center;
+  padding: 30px;
+}
+
+.introduction-buttons {
+  margin: 30px;
+  text-align: center;
+  padding: 2px;
+  display: flex;
+  flex-direction: row;
+  /* width: 50%; */
+  border-radius: 18px;
+  justify-content: space-evenly;
+}
+
+
+.introduction button {
+  align-self: center;
+  text-align: center;
+  padding: 2px;
+
+  width: 100px;
+  border-radius: 18px;
+  box-shadow: 10px 10px;
+}
+
+/* Login-signup */
+
+.login-signup form {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 0 50px 0 50px;
+}
+
+.login-signup input {
+  margin: 10px;
+  grid-column: 1;
+  width: 90%;
+  padding: 2px;
+
+  border-radius: 18px;
+
+}
+
+.button-group {
+  /* display: flex;
+  flex-direction: row; */
+  grid-column: 1;
+  text-align: center;
+  margin: 10px;
+}
+
+.login-signup button {
+  margin: 10px;
   
+  /* text-align: center; */
+  padding: 2px;
+  /* align-self: center; */
+  width: 40%;
+  border-radius: 18px;
+  box-shadow: 10px 10px;
+
+}
+
+.login-signup label {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  /* background-color: turquoise; */
+  padding: 2px;
+  justify-self: center;
 }
 
 /* Tablet */
@@ -79,13 +138,15 @@ select{
     grid-template-columns: 2fr 3fr;
     grid-template-rows: 1fr;
     justify-content: center;
+    height: 300px;
   }
   
   
   .nav-logo{
     grid-column: 1 / 2;
-    padding: 10% 15% 5% 15%;
+    padding: 5% 15% 0% 15%;
     align-self: center;
+    height: 300px;
   }
   
   .nav-buttons{
@@ -100,6 +161,63 @@ select{
     width: 100%;
     align-self: center;
     justify-self: center;
+    padding: 2px;
+    border-radius: 18px;
+    box-shadow: 10px 10px;
+  }
+
+
+
+/* signup and login form */
+
+  .login-signup form {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    padding: 0 50px 0 50px;
+  }
+  
+  .login-signup input {
+    margin: 10px;
+    grid-column: 2 / 2;
+    /* /* margin: 30px; */
+    width: 400px;
+    padding: 2px;
+    /* width: 50%; */
+    border-radius: 18px;
+    /* justify-content: space-evenly */
+  }
+  
+  .button-group {
+    display: flex;
+    flex-direction: row;
+    grid-column: 2;
+  
+  }
+  
+  .login-signup button {
+    margin: 10px;
+    align-self: center;
+    text-align: center;
+    padding: 2px;
+    
+    width: 150px;
+    border-radius: 18px;
+    box-shadow: 10px 10px;
+  
+  }
+  
+  .login-signup label {
+    grid-column: 1 / 2;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    /* background-color: turquoise; */
+    text-align: right;
+    padding: 2px;
+    justify-self: end;
+    width: 100px;
+  
   }
 }
 
@@ -124,23 +242,109 @@ select{
   }
   
   .nav-buttons{
-    background-color: tomato;
+    /* background-color: tomato; */
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     /* grid-column: 1fr 1fr 1fr 1fr; */
-    padding: 9% 14% 0px 10%;   
+    padding: 55px 50px 0px 30px;   
   }
   
   
   .nav button{
     border: steelblue 10px;
-    /* margin: 10px; */
-    width: 100px;
+    /* margin: 5px; */
+    padding: 15px;
+    width: 120px;
+    border-radius: 18px;
+    box-shadow: 10px 10px;
     /* align-self: center;
     justify-self: center; */
   }
+
+  .introduction {
+    text-align: center;
+    padding: 30px 10% 30px 10%;
+  }
+  .introduction-buttons {
+    padding: 0px 10% 0px 10%;
+    margin: 30px;
+    padding: 2px;
+    /* display: flex;
+    flex-direction: row; */
+    /* width: 50%; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;   
+    border-radius: 18px;
+    column-gap: 30px;
+    /* justify-content: space-between; */
+    /* background-color: tomato; */
+    /* place-items: center; */
+    /* box-align: center;
+    align-items: center */
+  }
+  
+  
+  .introduction button {
+
+    padding: 2px;
+
+    width: 100px;
+    border-radius: 18px;
+    box-shadow: 10px 10px;
+  }
+/* signup and login form */
+  .login-signup form {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 0 50px 0 50px;
+  }
+  
+  .login-signup input {
+    margin: 10px;
+    grid-column: 2 / 2;
+
+    width: 400px;
+    padding: 2px;
+
+    border-radius: 18px;
+
+  }
+  
+  .button-group {
+    display: flex;
+    flex-direction: row;
+    grid-column: 2;
+  
+  }
+  
+  .login-signup button {
+    margin: 10px;
+    align-self: center;
+    text-align: center;
+    padding: 2px;
+    
+    width: 150px;
+    border-radius: 18px;
+    box-shadow: 10px 10px;
+  
+  }
+  
+  .login-signup label {
+    grid-column: 1 / 2;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    /* background-color: turquoise; */
+    text-align: right;
+    padding: 2px;
+    justify-self: end;
+    width: 100px;
+  
+  }
+
 }
 
 
