--- a/what-job-react/src/App.css
+++ b/what-job-react/src/App.css
@@ -90,7 +90,7 @@
   padding: 0 50px 0 50px;
 }
 
-.login-signup input {
+.standard-form input {
   margin: 10px;
   grid-column: 1;
   width: 90%;
@@ -108,12 +108,9 @@
   margin: 10px;
 }
 
-.login-signup button {
+.standard-form button {
   margin: 10px;
-  
-  /* text-align: center; */
   padding: 2px;
-  /* align-self: center; */
   width: 40%;
   border-radius: 18px;
   box-shadow: 10px 10px;
